--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<img  class="sobre-mim-imagem" src="https://t8ninho.com/static/media/perfil.dcfde05227a2947a7f13.jpg">
 			<div  class="sobre-mim-texto">
 				<h1 class="sobre-mim-texto-titulo">SOBRE MIM</h1>
-				<p class="sobre-mim-texto-paragrafo">Eu sou Antonio Vitor, tenho 23 anos e tenho uma grande paixão por desenvolvimento de sites. Comecei na área apenas com HTML e CSS, atualmente estou estudando JavaScript combinado com algumas frameworks como ReactJS e React Native para tornar ainda mais atrativas minhas criações. Nesta página estão alguns dos meus projetos, fique a vontade para visitar cada um deles.</p>
+				<p class="sobre-mim-texto-paragrafo">Me chamo Antonio Vitor, tenho 23 anos e tenho uma grande paixão por desenvolvimento de sites. Comecei na área apenas com HTML e CSS, atualmente estou estudando JavaScript combinado com algumas frameworks como ReactJS e React Native para tornar ainda mais atrativas minhas criações. Nesta página estão alguns dos meus projetos, fique a vontade para visitar cada um deles.</p>
 				<div class="sobre-mim-botoes">
 					<a class="botao-ativo">CONTRATE-ME</a>
 					<a class="botao-inativo">RESUMO</a>
