alteração de cores e efeitos adicionais

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	<header class="cabecalho">
 		<img class="cabecalho-imagem" src="https://images.vexels.com/media/users/3/145827/isolated/preview/357f06ecbaaa77d750259c459c0ed55f-ilustracao-de-pedra-redonda.png">
 		<nav class="cabecalho-menu">
-			<a class="cabecalho-menu-item">INÍCIO</a>
-			<a class="cabecalho-menu-item">SOBRE MIM</a>
-			<a class="cabecalho-menu-item">PORTIFÓLIO</a>
-			<a class="cabecalho-menu-item">EXPERIÊNCIA</a>
+			<a href="#" class="cabecalho-menu-item">INÍCIO</a>
+			<a href="#" class="cabecalho-menu-item">SOBRE MIM</a>
+			<a href="#" class="cabecalho-menu-item">PORTIFÓLIO</a>
+			<a href="#" class="cabecalho-menu-item">EXPERIÊNCIA</a>
 			<a class=" botao-ativo cabecalho-menu-item">CONTATO</a>
 		</nav>
 	</header>
@@ -24,7 +24,7 @@
 				<h1 class="conteudo-titulo">DEV.</h1>
 				<h1 class="conteudo-titulo">FRONT-END</h1>
 			</div>
-			<a class="botao-ativo">PROJETOS ANTERIORES</a>
+			<a href="#" class="botao-ativo">PROJETOS ANTERIORES</a>
 		</section>
 		<section class="sobre-mim">
 			<img  class="sobre-mim-imagem" src="https://t8ninho.com/static/media/perfil.dcfde05227a2947a7f13.jpg">
@@ -32,8 +32,8 @@
 				<h1 class="sobre-mim-texto-titulo">SOBRE MIM</h1>
 				<p class="sobre-mim-texto-paragrafo">Me chamo Antonio Vitor, tenho 23 anos e tenho uma grande paixão por desenvolvimento de sites. Comecei na área apenas com HTML e CSS, atualmente estou estudando JavaScript combinado com algumas frameworks como ReactJS e React Native para tornar ainda mais atrativas minhas criações. Nesta página estão alguns dos meus projetos, fique a vontade para visitar cada um deles.</p>
 				<div class="sobre-mim-botoes">
-					<a class="botao-ativo">CONTRATE-ME</a>
-					<a class="botao-inativo">RESUMO</a>
+					<a href="#" class="botao-ativo">CONTRATE-ME</a>
+					<a href="#" class="botao-inativo">RESUMO</a>
 				</div>
 			</div>
 		</section>
