--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 	<header class="cabecalho">
 		<img class="cabecalho-imagem" src="https://images.vexels.com/media/users/3/145827/isolated/preview/357f06ecbaaa77d750259c459c0ed55f-ilustracao-de-pedra-redonda.png">
 		<nav class="cabecalho-menu">
-			<a href="#" class="cabecalho-menu-item">INÍCIO</a>
-			<a href="#" class="cabecalho-menu-item">SOBRE MIM</a>
+			<a href="#inicio" class="cabecalho-menu-item">INÍCIO</a>
+			<a href="#sobre-mim" class="cabecalho-menu-item">SOBRE MIM</a>
 			<a href="#" class="cabecalho-menu-item">PORTIFÓLIO</a>
 			<a href="#" class="cabecalho-menu-item">EXPERIÊNCIA</a>
 			<a class=" botao-ativo cabecalho-menu-item">CONTATO</a>
 		</nav>
 	</header>
 	<main class="conteudo">
-		<section class="conteudo-inicio">
+		<section id="inicio" class="conteudo-inicio">
 			<h2 class="conteudo-pre-titulo">Eu sou um</h2>
 			<div>
 				<h1 class="conteudo-titulo">DEV.</h1>
@@ -26,7 +26,7 @@
 			</div>
 			<a href="#" class="botao-ativo">PROJETOS ANTERIORES</a>
 		</section>
-		<section class="sobre-mim">
+		<section id="sobre-mim" class="sobre-mim">
 			<img  class="sobre-mim-imagem" src="https://t8ninho.com/static/media/perfil.dcfde05227a2947a7f13.jpg">
 			<div  class="sobre-mim-texto">
 				<h1 class="sobre-mim-texto-titulo">SOBRE MIM</h1>
