--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 			<a href="#" class="botao-ativo">PROJETOS ANTERIORES</a>
 		</section>
 		<section id="sobre-mim" class="sobre-mim">
-			<img  class="sobre-mim-imagem" src="https://t8ninho.com/static/media/perfil.dcfde05227a2947a7f13.jpg">
+			<div class="sobre-mim-borda-imagem">
+				<img  class="sobre-mim-imagem" src="https://t8ninho.com/static/media/perfil.dcfde05227a2947a7f13.jpg">
+			</div>
 			<div  class="sobre-mim-texto">
 				<h1 class="sobre-mim-texto-titulo">SOBRE MIM</h1>
 				<p class="sobre-mim-texto-paragrafo">Me chamo Antonio Vitor, tenho 23 anos e tenho uma grande paixão por desenvolvimento de sites. Comecei na área apenas com HTML e CSS, atualmente estou estudando JavaScript combinado com algumas frameworks como ReactJS e React Native para tornar ainda mais atrativas minhas criações. Nesta página estão alguns dos meus projetos, fique a vontade para visitar cada um deles.</p>
