resolvido problema de sobreposição de elementos e adicionado borda com espaçamento em imagens de destaque

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 			<a href="#" class="botao-ativo">PROJETOS ANTERIORES</a>
 		</section>
 		<section id="sobre-mim" class="sobre-mim">
-			<div class="sobre-mim-borda-imagem">
-				<img  class="sobre-mim-imagem" src="https://t8ninho.com/static/media/perfil.dcfde05227a2947a7f13.jpg">
+			<div class="borda-imagem">
+				<img  class="imagem-left" src="https://t8ninho.com/static/media/perfil.dcfde05227a2947a7f13.jpg">
 			</div>
 			<div  class="sobre-mim-texto">
 				<h1 class="sobre-mim-texto-titulo">SOBRE MIM</h1>
