--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 </head>
 <body>
 	<header class="cabecalho">
-		<img class="cabecalho-imagem" src="https://images.vexels.com/media/users/3/145827/isolated/preview/357f06ecbaaa77d750259c459c0ed55f-ilustracao-de-pedra-redonda.png">
-		<nav class="cabecalho-menu">
-			<a href="#inicio" class="cabecalho-menu-item">INÍCIO</a>
-			<a href="#sobre-mim" class="cabecalho-menu-item">SOBRE MIM</a>
-			<a href="#" class="cabecalho-menu-item">PORTIFÓLIO</a>
-			<a href="#" class="cabecalho-menu-item">EXPERIÊNCIA</a>
-			<a class=" botao-ativo cabecalho-menu-item">CONTATO</a>
-		</nav>
+		<div class="cabecalho-conteudo">
+			<img class="cabecalho-imagem" src="https://images.vexels.com/media/users/3/145827/isolated/preview/357f06ecbaaa77d750259c459c0ed55f-ilustracao-de-pedra-redonda.png">
+			<nav class="cabecalho-menu">
+				<a href="#inicio" class="cabecalho-menu-item">INÍCIO</a>
+				<a href="#sobre-mim" class="cabecalho-menu-item">SOBRE MIM</a>
+				<a href="#" class="cabecalho-menu-item">PORTIFÓLIO</a>
+				<a href="#" class="cabecalho-menu-item">EXPERIÊNCIA</a>
+				<a class=" botao-ativo cabecalho-menu-item">CONTATO</a>
+			</nav>
+		</div>
 	</header>
 	<main class="conteudo">
 		<section id="inicio" class="conteudo-inicio">
