Adicionado pequenos detalhes visuais em bot~es e barra de rolagem de navegação personalizada

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</section>
 		<section id="sobre-mim" class="sobre-mim">
 			<div class="borda-imagem">
-				<img  class="imagem-left" src="https://t8ninho.com/static/media/perfil.dcfde05227a2947a7f13.jpg">
+				<img class="imagem-left" src="https://t8ninho.com/static/media/perfil.dcfde05227a2947a7f13.jpg">
 			</div>
 			<div  class="sobre-mim-texto">
 				<h1 class="sobre-mim-texto-titulo">SOBRE MIM</h1>
@@ -48,6 +48,6 @@
 
 		</section>
 	</main>
-	<script src="./js/particulas.js"></script>
+	<script src="particulas.js"></script>
 </body>
 </html>
