--- a/index.html
+++ b/index.html
@@ -28,23 +28,25 @@
 			</div>
 			<a href="#" class="botao-ativo">PROJETOS ANTERIORES</a>
 		</section>
-		<section id="sobre-mim" class="sobre-mim">
-			<div class="borda-imagem">
-				<img class="imagem-left" src="https://t8ninho.com/static/media/perfil.dcfde05227a2947a7f13.jpg">
-			</div>
-			<div  class="sobre-mim-texto">
-				<h1 class="sobre-mim-texto-titulo">SOBRE MIM</h1>
-				<p class="sobre-mim-texto-paragrafo">Me chamo Antonio Vitor, tenho 23 anos e tenho uma grande paixão por desenvolvimento de sites. Comecei na área apenas com HTML e CSS, atualmente estou estudando JavaScript combinado com algumas frameworks como ReactJS e React Native para tornar ainda mais atrativas minhas criações. Nesta página estão alguns dos meus projetos, fique a vontade para visitar cada um deles.</p>
-				<div class="sobre-mim-botoes">
-					<a href="#" class="botao-ativo">CONTRATE-ME</a>
-					<a href="#" class="botao-inativo">RESUMO</a>
+		<section id="sobre-mim" class="sobre-mim-container">
+			<div  class="sobre-mim">
+				<div class="borda-imagem">
+					<img class="imagem-left" src="https://t8ninho.com/static/media/perfil.dcfde05227a2947a7f13.jpg">
+				</div>
+				<div  class="sobre-mim-texto">
+					<h1 class="sobre-mim-texto-titulo">SOBRE MIM</h1>
+					<p class="sobre-mim-texto-paragrafo">Me chamo Antonio Vitor, tenho 23 anos e tenho uma grande paixão por desenvolvimento de sites. Comecei na área apenas com HTML e CSS, atualmente estou estudando JavaScript combinado com algumas frameworks como ReactJS e React Native para tornar ainda mais atrativas minhas criações. Nesta página estão alguns dos meus projetos, fique a vontade para visitar cada um deles.</p>
+					<div class="sobre-mim-botoes">
+						<a href="#" class="botao-ativo">CONTRATE-ME</a>
+						<a href="#" class="botao-inativo">RESUMO</a>
+					</div>
 				</div>
 			</div>
 		</section>
-		<section class="">
+		<section class="portifolio">
 
 		</section>
-		<section class="">
+		<section class="experiencia">
 
 		</section>
 	</main>
