Adicionada parcialmente categoria e itens de projetos, e estilos referentes aos mesmos

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<nav class="cabecalho-menu">
 				<a href="#inicio" class="cabecalho-menu-item">INÍCIO</a>
 				<a href="#sobre-mim" class="cabecalho-menu-item">SOBRE MIM</a>
-				<a href="#" class="cabecalho-menu-item">PORTIFÓLIO</a>
+				<a href="#portifolio" class="cabecalho-menu-item">PORTIFÓLIO</a>
 				<a href="#" class="cabecalho-menu-item">EXPERIÊNCIA</a>
 				<a class=" botao-ativo cabecalho-menu-item">CONTATO</a>
 			</nav>
@@ -28,24 +28,68 @@
 			</div>
 			<a href="#" class="botao-ativo">PROJETOS ANTERIORES</a>
 		</section>
-		<section id="sobre-mim" class="sobre-mim">
+		<section id="sobre-mim" class="card">
 			<div class="borda-imagem">
 				<img class="imagem-left" src="https://t8ninho.com/static/media/perfil.dcfde05227a2947a7f13.jpg">
 			</div>
-			<div  class="sobre-mim-texto">
-				<h1 class="sobre-mim-texto-titulo">SOBRE MIM</h1>
-				<p class="sobre-mim-texto-paragrafo">Me chamo Antonio Vitor, tenho 23 anos e tenho uma grande paixão por desenvolvimento de sites. Comecei na área apenas com HTML e CSS, atualmente estou estudando JavaScript combinado com algumas frameworks como ReactJS e React Native para tornar ainda mais atrativas minhas criações. Nesta página estão alguns dos meus projetos, fique a vontade para visitar cada um deles.</p>
-				<div class="sobre-mim-botoes">
+			<div  class="card-texto">
+				<h1 class="card-texto-titulo">SOBRE MIM</h1>
+				<p class="card-texto-paragrafo">Me chamo Antonio Vitor, tenho 23 anos e tenho uma grande paixão por desenvolvimento de sites. Comecei na área apenas com HTML e CSS, atualmente estou estudando JavaScript combinado com algumas frameworks como ReactJS e React Native para tornar ainda mais atrativas minhas criações. Nesta página estão alguns dos meus projetos, fique a vontade para visitar cada um deles.</p>
+				<div class="card-botoes">
 					<a href="#" class="botao-ativo">CONTRATE-ME</a>
 					<a href="#" class="botao-inativo">RESUMO</a>
 				</div>
 			</div>
 		</section>
-		<section class="portifolio">
-
+		<section id="portifolio">
+			<h1 class="portifolio-titulo">Portifólio</h1>
+			<div class="card">
+				<div  class="card-texto">
+					<h1 class="card-texto-titulo-geral">projeto 1</h1>
+					<h1 class="card-texto-titulo">Galeria de Fotos</h1>
+					<p class="card-texto-paragrafo">Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado.</p>
+					<a href="#" class="botao-seta">Ler mais</a>
+				</div>
+				<div class="borda-imagem">
+					<img class="imagem-right" src="https://t8ninho.com/static/media/GaleriaWeb.dae38c1ec18e800d5212.png">
+				</div>
+			</div>
+			<div class="card">
+				<div class="borda-imagem">
+					<img class="imagem-left" src="https://t8ninho.com/static/media/SurvivalExtremo-Site.02ce190708eb20a434cd.png">
+				</div>
+				<div  class="card-texto">
+					<h1 class="card-texto-titulo-geral">projeto 2</h1>
+					<h1 class="card-texto-titulo">Survival Extremo</h1>
+					<p class="card-texto-paragrafo">Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado.</p>
+					<a href="#" class="botao-seta">Ler mais</a>
+				</div>
+			</div>
+			<div class="card">
+				<div  class="card-texto">
+					<h1 class="card-texto-titulo-geral">projeto 3</h1>
+					<h1 class="card-texto-titulo">App Lista dos sonhos</h1>
+					<p class="card-texto-paragrafo">Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado.</p>
+					<a href="#" class="botao-seta">Ler mais</a>
+				</div>
+				<div class="borda-imagem">
+					<img class="imagem-right" src="https://t8ninho.com/static/media/ListadosSonhosApp.982474d82fa5772f4aab.png">
+				</div>
+			</div>
+			<div class="card">
+				<div class="borda-imagem">
+					<img class="imagem-left" src="https://t8ninho.com/static/media/BolitosGourmet.d467a601764e60582bea.png">
+				</div>
+				<div  class="card-texto">
+					<h1 class="card-texto-titulo-geral">projeto 4</h1>
+					<h1 class="card-texto-titulo">Bolitos Gourmet</h1>
+					<p class="card-texto-paragrafo">Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado.</p>
+					<a href="#" class="botao-seta">Ler mais</a>
+				</div>
+			</div>
 		</section>
 		<section class="experiencia">
-
+			
 		</section>
 	</main>
 	<script src="particulas.js"></script>
