--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 				<a href="#inicio" class="cabecalho-menu-item">INÍCIO</a>
 				<a href="#sobre-mim" class="cabecalho-menu-item">SOBRE MIM</a>
 				<a href="#portifolio" class="cabecalho-menu-item">PORTIFÓLIO</a>
+				<a href="#servicos" class="cabecalho-menu-item">Serviços</a>
 				<a href="#" class="cabecalho-menu-item">EXPERIÊNCIA</a>
 				<a class=" botao-ativo cabecalho-menu-item">CONTATO</a>
 			</nav>
@@ -87,11 +88,17 @@
 					<a href="#" class="botao-seta">Ler mais</a>
 				</div>
 			</div>
+			<a href="#" class="botao-ativo">Ver todos</a>
+		</section>
+		<section id="servicos">
+			<h1 class="portifolio-titulo">Serviços</h1>
+			<div class="serviços-container-card">
+				
+			</div>
 		</section>
 		<section class="experiencia">
 			
 		</section>
 	</main>
-	<script src="particulas.js"></script>
 </body>
 </html>
