adicionada categoria serviços e algumas correçoes de efeitos

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>T8ninho | Portifólio</title>
 </head>
 <body>
+	<!-- Início Cabeçalho -->
 	<header class="cabecalho">
 		<div class="cabecalho-conteudo">
 			<img class="cabecalho-imagem" src="https://images.vexels.com/media/users/3/145827/isolated/preview/357f06ecbaaa77d750259c459c0ed55f-ilustracao-de-pedra-redonda.png">
@@ -20,7 +21,11 @@
 			</nav>
 		</div>
 	</header>
+	<!-- FIM Cabeçalho -->
+
+	<!-- Início conteudo Portifólio -->
 	<main class="conteudo">
+		<!-- Início Título -->
 		<section id="inicio" class="conteudo-inicio">
 			<h2 class="conteudo-pre-titulo">Eu sou um</h2>
 			<div>
@@ -29,6 +34,9 @@
 			</div>
 			<a href="#" class="botao-ativo">PROJETOS ANTERIORES</a>
 		</section>
+		<!-- FIM Título -->
+
+		<!-- Início sobre mim -->
 		<section id="sobre-mim" class="card">
 			<div class="borda-imagem">
 				<img class="imagem-left" src="https://t8ninho.com/static/media/perfil.dcfde05227a2947a7f13.jpg">
@@ -42,19 +50,26 @@
 				</div>
 			</div>
 		</section>
+		<!-- FIM sobre mim -->
+
+		<!-- Inicio Items Portifólio -->
 		<section id="portifolio">
 			<h1 class="portifolio-titulo">Portifólio</h1>
+			<!-- Card 1 -->
 			<div class="card">
 				<div  class="card-texto">
 					<h1 class="card-texto-titulo-geral">projeto 1</h1>
 					<h1 class="card-texto-titulo">Galeria de Fotos</h1>
 					<p class="card-texto-paragrafo">Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado.</p>
-					<a href="#" class="botao-seta">Ler mais</a>
+					<a href="#">Ler mais
+						<div  class="botao-seta"></div>
+					</a>
 				</div>
 				<div class="borda-imagem">
 					<img class="imagem-right" src="https://t8ninho.com/static/media/GaleriaWeb.dae38c1ec18e800d5212.png">
 				</div>
 			</div>
+			<!-- Card 2 -->
 			<div class="card">
 				<div class="borda-imagem">
 					<img class="imagem-left" src="https://t8ninho.com/static/media/SurvivalExtremo-Site.02ce190708eb20a434cd.png">
@@ -63,20 +78,26 @@
 					<h1 class="card-texto-titulo-geral">projeto 2</h1>
 					<h1 class="card-texto-titulo">Survival Extremo</h1>
 					<p class="card-texto-paragrafo">Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado.</p>
-					<a href="#" class="botao-seta">Ler mais</a>
+					<a href="#">Ler mais
+						<div  class="botao-seta"></div>
+					</a>
 				</div>
 			</div>
+			<!-- Card 3 -->
 			<div class="card">
 				<div  class="card-texto">
 					<h1 class="card-texto-titulo-geral">projeto 3</h1>
 					<h1 class="card-texto-titulo">App Lista dos sonhos</h1>
 					<p class="card-texto-paragrafo">Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado.</p>
-					<a href="#" class="botao-seta">Ler mais</a>
+					<a href="#">Ler mais
+						<div  class="botao-seta"></div>
+					</a>
 				</div>
 				<div class="borda-imagem">
 					<img class="imagem-right" src="https://t8ninho.com/static/media/ListadosSonhosApp.982474d82fa5772f4aab.png">
 				</div>
 			</div>
+			<!-- Card 4 -->
 			<div class="card">
 				<div class="borda-imagem">
 					<img class="imagem-left" src="https://t8ninho.com/static/media/BolitosGourmet.d467a601764e60582bea.png">
@@ -85,17 +106,46 @@
 					<h1 class="card-texto-titulo-geral">projeto 4</h1>
 					<h1 class="card-texto-titulo">Bolitos Gourmet</h1>
 					<p class="card-texto-paragrafo">Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado.</p>
-					<a href="#" class="botao-seta">Ler mais</a>
+					<a href="#">Ler mais
+						<div  class="botao-seta"></div>
+					</a>
 				</div>
 			</div>
 			<a href="#" class="botao-ativo">Ver todos</a>
 		</section>
+		<!-- FIM Itens Portifólio -->
+
+		<!-- Início Itens Serviços -->
 		<section id="servicos">
 			<h1 class="portifolio-titulo">Serviços</h1>
 			<div class="serviços-container-card">
-				
+				<!-- item 1 -->
+				<div class="servicos-card">
+					<div class="servicos-card-titulo">
+						<a>#</a>
+						<h1>Desenvolvimento de App Desktop</h1>
+					</div>
+					<p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado.</p>
+				</div>
+				<!-- item 2 -->
+				<div class="servicos-card">
+					<div class="servicos-card-titulo">
+						<a>#</a>
+						<h1>Desenvolvimento de App Mobile</h1>
+					</div>
+					<p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado.</p>
+				</div>
+				<div class="servicos-card">
+					<div class="servicos-card-titulo">
+						<a>#</a>
+						<h1>Edição de imagens</h1>
+					</div>
+					<p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado.</p>
+				</div>
 			</div>
 		</section>
+		<!-- Início Itens Serviços -->
+
 		<section class="experiencia">
 			
 		</section>
