--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
 		<!-- Inicio Items Portifólio -->
 		<section id="portifolio">
-			<h1 class="portifolio-titulo">Portifólio</h1>
+			<h1 class="portifolio-titulo oculto">Portifólio</h1>
 			<!-- Card 1 -->
-			<div class="card">
+			<div class="card oculto left">
 				<div  class="card-texto">
 					<h1 class="card-texto-titulo-geral">projeto 1</h1>
 					<h1 class="card-texto-titulo">Galeria de Fotos</h1>
@@ -70,7 +70,7 @@
 				</div>
 			</div>
 			<!-- Card 2 -->
-			<div class="card">
+			<div class="card oculto right">
 				<div class="borda-imagem">
 					<img class="imagem-left" src="https://t8ninho.com/static/media/SurvivalExtremo-Site.02ce190708eb20a434cd.png">
 				</div>
@@ -84,7 +84,7 @@
 				</div>
 			</div>
 			<!-- Card 3 -->
-			<div class="card">
+			<div class="card oculto left">
 				<div  class="card-texto">
 					<h1 class="card-texto-titulo-geral">projeto 3</h1>
 					<h1 class="card-texto-titulo">App Lista dos sonhos</h1>
@@ -98,7 +98,7 @@
 				</div>
 			</div>
 			<!-- Card 4 -->
-			<div class="card">
+			<div class="card oculto right">
 				<div class="borda-imagem">
 					<img class="imagem-left" src="https://t8ninho.com/static/media/BolitosGourmet.d467a601764e60582bea.png">
 				</div>
@@ -151,4 +151,5 @@
 		</section>
 	</main>
 </body>
+<script src="script.js"></script>
 </html>
