--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css" >
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+	<script defer src="/script.js"></script>
 	<title>T8ninho | Portifólio</title>
 </head>
 <body>
@@ -14,17 +15,18 @@
   	</script>
 	<!-- Início Cabeçalho -->
 	<header class="cabecalho">
-		<div class="cabecalho-conteudo">
-			<img class="cabecalho-imagem" src="https://images.vexels.com/media/users/3/145827/isolated/preview/357f06ecbaaa77d750259c459c0ed55f-ilustracao-de-pedra-redonda.png">
-			<nav class="cabecalho-menu">
-				<a href="#inicio" class="cabecalho-menu-item">INÍCIO</a>
-				<a href="#sobre-mim" class="cabecalho-menu-item">SOBRE MIM</a>
-				<a href="#portifolio" class="cabecalho-menu-item">PORTIFÓLIO</a>
-				<a href="#servicos" class="cabecalho-menu-item">Serviços</a>
-				<a href="#" class="cabecalho-menu-item">EXPERIÊNCIA</a>
-				<a class=" botao-ativo cabecalho-menu-item">CONTATO</a>
-			</nav>
-		</div>
+		<nav class="cabecalho-conteudo">
+			<img class="cabecalho-imagem" src="https://images.vexels.com/media/users/3/145827/isolated/preview/357f06ecbaaa77d750259c459c0ed55f-ilustracao-de-pedra-redonda.png">	
+			<button class="hamburger"></button>
+			<ul class="cabecalho-menu">
+				<li><a href="#inicio" class="cabecalho-menu-item">INÍCIO</a></li>
+				<li><a href="#sobre-mim" class="cabecalho-menu-item">SOBRE MIM</a></li>
+				<li><a href="#portifolio" class="cabecalho-menu-item">PORTIFÓLIO</a></li>
+				<li><a href="#servicos" class="cabecalho-menu-item">Serviços</a></li>
+				<li><a href="#" class="cabecalho-menu-item">EXPERIÊNCIA</a></li>
+				<li><a class=" botao-ativo cabecalho-menu-item">CONTATO</a></li>
+			</ul>
+		</nav>
 	</header>
 	<!-- FIM Cabeçalho -->
 
@@ -38,7 +40,7 @@
 					<h1 class="conteudo-titulo">DEV.</h1>
 					<h1 class="conteudo-titulo">FRONT-END</h1>
 				</div>
-			<a href="#" class="botao-ativo">PROJETOS ANTERIORES</a>
+				<a href="#" class="botao-ativo">PROJETOS ANTERIORES</a>
 			</div>
 		</section>
 		<!-- FIM Título -->
